--- a/WebService/WebService/WebService/Views/Shared/_Layout.cshtml
+++ b/WebService/WebService/WebService/Views/Shared/_Layout.cshtml
@@ -6,11 +6,10 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="/Scripts/jquery.js"></script>
 </head>
 <body>
     @RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
